--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aloychow.github.io/portfolio",
+  "homepage": "http://aloychow.github.io/tiktok-portfolio-website",
   "name": "tiktok-portfolio-website",
   "version": "0.1.0",
   "private": true,
