--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
+    "react-skillbars": "^1.6.1",
     "react-text-typist": "^1.0.9",
     "react-typist": "^2.0.5",
     "styled-components": "^5.3.3",
